Name:		drasil-example
Version:	0.1.24
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software - Example SubPackage

executable hghc
  hs-source-dirs: .
  main-is: Drasil/HGHC/Main.hs
  other-modules:
      Drasil.HGHC.Body
    , Drasil.HGHC.HeatTransfer
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil-lang >= 0.1.58,
    drasil-data >= 0.1.11,
    drasil-code >= 0.1.7,
    drasil-database >= 0.1.0,
    drasil-printers >= 0.1.8,
    drasil-gen >= 0.1.3,
    drasil-docLang >= 0.1.26,
    drasil-theory >= 0.1.0,
    drasil-utils >= 0.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -Wredundant-constraints

executable glassbr
  hs-source-dirs: .
  main-is: Drasil/GlassBR/Main.hs
  other-modules:
      Drasil.GlassBR.Assumptions
    , Drasil.GlassBR.Body
    , Drasil.GlassBR.Changes
    , Drasil.GlassBR.Concepts
    , Drasil.GlassBR.DataDefs
    , Drasil.GlassBR.Figures
    , Drasil.GlassBR.Goals
    , Drasil.GlassBR.ModuleDefs
    , Drasil.GlassBR.IMods
    , Drasil.GlassBR.References
    , Drasil.GlassBR.Requirements
    , Drasil.GlassBR.Symbols
    , Drasil.GlassBR.TMods
    , Drasil.GlassBR.Unitals
    , Drasil.GlassBR.Units
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil-lang >= 0.1.58,
    drasil-data >= 0.1.12,
    drasil-code >= 0.1.7,
    drasil-database >= 0.1.1,
    drasil-printers >= 0.1.8,
    drasil-gen >= 0.1.3,
    drasil-docLang >= 0.1.26,
    drasil-theory >= 0.1.0,
    drasil-utils >= 0.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints

executable nopcm
  hs-source-dirs: .
  main-is: Drasil/NoPCM/Main.hs
  other-modules:
      Drasil.NoPCM.Assumptions
    , Drasil.NoPCM.Body
    , Drasil.NoPCM.Changes
    , Drasil.NoPCM.Unitals
    , Drasil.NoPCM.DataDefs
    , Drasil.NoPCM.Definitions
    , Drasil.NoPCM.IMods
    , Drasil.NoPCM.GenDefs
    , Drasil.NoPCM.Goals
    , Drasil.NoPCM.Requirements
    , Drasil.NoPCM.References
    , Drasil.SWHS.Assumptions
    , Drasil.SWHS.Body
    , Drasil.SWHS.Changes
    , Drasil.SWHS.Concepts
    , Drasil.SWHS.DataDefs
    , Drasil.SWHS.GenDefs
    , Drasil.SWHS.Goals
    , Drasil.SWHS.Changes
    , Drasil.SWHS.References
    , Drasil.SWHS.Requirements
    , Drasil.SWHS.TMods
    , Drasil.SWHS.IMods
    , Drasil.SWHS.Unitals
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil-lang >= 0.1.58,
    drasil-data >= 0.1.12,
    drasil-code >= 0.1.7,
    drasil-database >= 0.1.1,
    drasil-printers >= 0.1.8,
    drasil-gen >= 0.1.3,
    drasil-docLang >= 0.1.26,
    drasil-theory >= 0.1.0,
    drasil-utils >= 0.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints

executable swhs
  hs-source-dirs: .
  main-is: Drasil/SWHS/Main.hs
  other-modules:
      Drasil.SWHS.Assumptions
    , Drasil.SWHS.Body
    , Drasil.SWHS.Changes
    , Drasil.SWHS.Concepts
    , Drasil.SWHS.DataDefs
    , Drasil.SWHS.GenDefs
    , Drasil.SWHS.Generate
    , Drasil.SWHS.Goals
    , Drasil.SWHS.IMods
    , Drasil.SWHS.References
    , Drasil.SWHS.Requirements
    , Drasil.SWHS.TMods
    , Drasil.SWHS.Unitals
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    drasil-lang >= 0.1.58,
    drasil-data >= 0.1.12,
    drasil-code >= 0.1.7,
    drasil-database >= 0.1.1,
    drasil-printers >= 0.1.8,
    drasil-gen >= 0.1.3,
    drasil-docLang >= 0.1.26,
    drasil-theory >= 0.1.0,
    drasil-utils >= 0.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints

executable ssp
  hs-source-dirs: .
  main-is: Drasil/SSP/Main.hs
  other-modules:
      Drasil.SSP.Assumptions
    , Drasil.SSP.BasicExprs
    , Drasil.SSP.Body
    , Drasil.SSP.Changes
    , Drasil.SSP.DataDefs
    , Drasil.SSP.Defs
    , Drasil.SSP.Figures
    , Drasil.SSP.GenDefs
    , Drasil.SSP.Goals
    , Drasil.SSP.IMods
    , Drasil.SSP.References
    , Drasil.SSP.Requirements
    , Drasil.SSP.TMods
    , Drasil.SSP.Unitals
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil-lang >= 0.1.58,
    drasil-data >= 0.1.12,
    drasil-code >= 0.1.7,
    drasil-database >= 0.1.1,
    drasil-printers >= 0.1.8,
    drasil-gen >= 0.1.3,
    drasil-docLang >= 0.1.26,
    drasil-theory >= 0.1.0,
    drasil-utils >= 0.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints

executable gamephysics
  hs-source-dirs: .
  main-is: Drasil/GamePhysics/Main.hs
  other-modules:
      Drasil.GamePhysics.Assumptions
    , Drasil.GamePhysics.Body
    , Drasil.GamePhysics.Changes
    , Drasil.GamePhysics.Concepts
    , Drasil.GamePhysics.DataDefs
    , Drasil.GamePhysics.GenDefs
    , Drasil.GamePhysics.Goals
    , Drasil.GamePhysics.TMods
    , Drasil.GamePhysics.Unitals
    , Drasil.GamePhysics.IMods
    , Drasil.GamePhysics.References
    , Drasil.GamePhysics.Requirements
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil-lang >= 0.1.58,
    drasil-data >= 0.1.12,
    drasil-code >= 0.1.7,
    drasil-database >= 0.1.1,
    drasil-printers >= 0.1.8,
    drasil-gen >= 0.1.3,
    drasil-docLang >= 0.1.26,
    drasil-theory >= 0.1.0,
    drasil-utils >= 0.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints

executable projectile
  hs-source-dirs: .
  main-is: Drasil/Projectile/Main.hs
  other-modules:
      Drasil.Projectile.Assumptions
    , Drasil.Projectile.Body
    , Drasil.Projectile.Concepts
    , Drasil.Projectile.DataDefs
    , Drasil.Projectile.Figures
    , Drasil.Projectile.GenDefs
    , Drasil.Projectile.Goals
    , Drasil.Projectile.IMods
    , Drasil.Projectile.References
    , Drasil.Projectile.Requirements
    , Drasil.Projectile.TMods
    , Drasil.Projectile.Unitals
    
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil-lang >= 0.1.58,
    drasil-data >= 0.1.12,
    drasil-code >= 0.1.7,
    drasil-database >= 0.1.1,
    drasil-printers >= 0.1.8,
    drasil-gen >= 0.1.3,
    drasil-docLang >= 0.1.26,
    drasil-theory >= 0.1.0,
    drasil-utils >= 0.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints

executable template
  hs-source-dirs: .
  main-is: Drasil/Template/Main.hs
  other-modules:
      Drasil.Template.Body
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    drasil-lang >= 0.1.58,
    drasil-data >= 0.1.12,
    drasil-code >= 0.1.7,
    drasil-database >= 0.1.1,
    drasil-printers >= 0.1.8,
    drasil-gen >= 0.1.3,
    drasil-docLang >= 0.1.26,
    drasil-theory >= 0.1.0,
    drasil-utils >= 0.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints

source-repository head
  type:     git
  location: git://github.com/JacquesCarette/Drasil.git
  subdir: code
