Name:		  drasil-gen
Version:	0.1.3
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software - Generate SubPackage

library
  exposed-modules:
    Language.Drasil.Generate

  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    parsec >= 3.1.9,
    time >= 1.8.0.2,
    drasil-lang >= 0.1.59,
    drasil-build >= 0.1.0,
    drasil-code >= 0.1.7,
    drasil-printers >= 0.1.8
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints


source-repository head
  type:     git
  location: git://github.com/JacquesCarette/Drasil.git
  subdir: code
