Name:		  drasil-gool
Version:	0.1.0
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith, Brooks MacLachlan
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software - GOOL SubPackage

library
  exposed-modules:
      GOOL.Drasil
  other-modules:
      GOOL.Drasil.CodeType
    , GOOL.Drasil.Data
    , GOOL.Drasil.Helpers
    , GOOL.Drasil.LanguageRenderer.LanguagePolymorphic
    , GOOL.Drasil.LanguageRenderer
    , GOOL.Drasil.LanguageRenderer.JavaRenderer
    , GOOL.Drasil.LanguageRenderer.PythonRenderer
    , GOOL.Drasil.LanguageRenderer.CSharpRenderer
    , GOOL.Drasil.LanguageRenderer.CppRenderer
    , GOOL.Drasil.Symantics
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    filepath >= 1.4.1,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    drasil-utils >= 0.1.1
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints

executable codegenTest
  hs-source-dirs: .
  main-is: Test/Main.hs
  other-modules:
      Test.HelloWorld
    , Test.FileTests
    , Test.PatternTest
    , Test.Observer
    , Test.Helper
    , GOOL.Drasil
    , GOOL.Drasil.CodeType
    , GOOL.Drasil.Data
    , GOOL.Drasil.Helpers
    , GOOL.Drasil.LanguageRenderer.LanguagePolymorphic
    , GOOL.Drasil.LanguageRenderer
    , GOOL.Drasil.LanguageRenderer.JavaRenderer
    , GOOL.Drasil.LanguageRenderer.PythonRenderer
    , GOOL.Drasil.LanguageRenderer.CSharpRenderer
    , GOOL.Drasil.LanguageRenderer.CppRenderer
    , GOOL.Drasil.Symantics
  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    filepath >= 1.4.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    drasil-utils >= 0.1.1
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -Wredundant-constraints -main-is Test.Main

source-repository head
  type:     git
  location: git://github.com/JacquesCarette/Drasil.git
  subdir: code
