Name:		drasil-lang
Version:	0.1.24
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software - Language SubPackage

library
  exposed-modules:
      Language.Drasil
    , Language.Drasil.Development
    , Language.Drasil.NounPhrase
    , Language.Drasil.RefTypes
  other-modules:
      Language.Drasil.SystemInformation
    , Language.Drasil.Expr
    , Language.Drasil.Expr.Extract
    , Language.Drasil.Expr.Math
    , Language.Drasil.Expr.Precedence
    , Language.Drasil.Classes
    , Language.Drasil.Document
    , Language.Drasil.Document.Core
    , Language.Drasil.Document.Extract
    , Language.Drasil.Document.GetChunk
    , Language.Drasil.Label.Core
    , Language.Drasil.Label
    , Language.Drasil.Misc
    , Language.Drasil.NounPhrase.Core
    , Language.Drasil.People
    , Language.Drasil.Reference
    , Language.Drasil.Sentence.Extract
    , Language.Drasil.Sentence.EmbedSymbol
    , Language.Drasil.Space
    , Language.Drasil.Spec
    , Language.Drasil.Symbol
    , Language.Drasil.SymbolAlphabet
    , Language.Drasil.UID
    , Language.Drasil.Unicode
    , Language.Drasil.Chunk.AssumpChunk
    , Language.Drasil.Chunk.Attribute
    , Language.Drasil.Chunk.Change
    , Language.Drasil.Chunk.Citation
    , Language.Drasil.Chunk.CommonIdea
    , Language.Drasil.Chunk.Concept
    , Language.Drasil.Chunk.Concept.Core
    , Language.Drasil.Chunk.Constrained
    , Language.Drasil.Chunk.Constrained.Core
    , Language.Drasil.Chunk.DataDefinition
    , Language.Drasil.Chunk.DefinedQuantity
    , Language.Drasil.Chunk.Derivation
    , Language.Drasil.Chunk.Eq
    , Language.Drasil.Chunk.GenDefn
    , Language.Drasil.Chunk.Goal
    , Language.Drasil.Chunk.InstanceModel
    , Language.Drasil.Chunk.NamedIdea
    , Language.Drasil.Chunk.PhysSystDesc
    , Language.Drasil.Chunk.Quantity
    , Language.Drasil.Chunk.References
    , Language.Drasil.Chunk.Relation
    , Language.Drasil.Chunk.ReqChunk
    , Language.Drasil.Chunk.ShortName
    , Language.Drasil.Chunk.SymbolForm
    , Language.Drasil.Chunk.Theory
    , Language.Drasil.Chunk.UncertainQuantity
    , Language.Drasil.Chunk.Unital
    , Language.Drasil.Chunk.Unitary
    , Language.Drasil.Chunk.UnitaryConcept
    , Language.Drasil.Chunk.VarChunk
    , Language.Drasil.ChunkDB
    , Language.Drasil.Development.Unit
    , Language.Drasil.Development.UnitLang

  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    parsec >= 3.1.9,
    data-fix (>= 0.0.4 && <= 1.0)
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: git://github.com/JacquesCarette/Drasil.git
  subdir: code
