Name:		drasil-printers
Version:	0.1.10
Cabal-Version:  >= 1.18
Author:		Dan Szymczak, Steven Palmer, Jacques Carette, Spencer Smith
build-type:     Simple
Synopsis:	A framework for code and document generation for scientific software - Printers SubPackage

library
  exposed-modules:
      Language.Drasil.Printers
  other-modules:
      Language.Drasil.Config
    , Language.Drasil.Format
    , Language.Drasil.Output.Formats
    , Language.Drasil.HTML.CSS
    , Language.Drasil.HTML.Helpers
    , Language.Drasil.HTML.Print
    , Language.Drasil.HTML.Monad
    , Language.Drasil.Plain.Helpers
    , Language.Drasil.Plain.Print
    , Language.Drasil.Printing.Helpers
    , Language.Drasil.Printing.AST
    , Language.Drasil.Printing.Citation
    , Language.Drasil.Printing.Import
    , Language.Drasil.Printing.LayoutObj
    , Language.Drasil.Printing.PrintingInformation
    , Language.Drasil.TeX.Helpers
    , Language.Drasil.TeX.Print
    , Language.Drasil.TeX.Monad
    , Language.Drasil.TeX.Preamble

  Build-Depends:
    base >= 4.7,
    lens >= 4.12,
    containers >= 0.5.5.1,
    pretty >= 1.1.1.1,
    mtl >= 2.2.1,
    directory >= 1.2.6.2,
    split >= 0.2.3.1,
    MissingH >= 1.4.0.1,
    parsec >= 3.1.9,
    data-fix (>= 0.0.4 && <= 1.0),
    drasil-lang >= 0.1.59,
    drasil-utils >= 0.1.0,
    drasil-build >= 0.1.1,
    drasil-database >= 0.1.0
  default-language: Haskell2010
  ghc-options:      -Wall -Wredundant-constraints


source-repository head
  type:     git
  location: git://github.com/JacquesCarette/Drasil.git
  subdir: code
