name:               website
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , directory >= 1.3.0.2
                  , MissingH >= 1.4.0
                  , filepath >= 1.4.1
  ghc-options:      -threaded
  default-language: Haskell2010
